# transcodely-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  buf.gen.yaml  buf.yaml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  claude-mention.yml  pr-title.yml  release.yml
examples/: 01_create_job.py  02_watch_job.py  03_pagination.py  04_error_handling.py  05_create_r2_origin.py  05_verify_webhook.py  06_create_s3_compatible_origin.py  07_create_job_with_origin.py
proto/transcodely/v1/: api_key.proto  app.proto  codec_av1.proto  codec_h264.proto  codec_h265.proto  codec_vp9.proto  common.proto  content_aware.proto  drm.proto  hdr.proto  health.proto  job.proto  media.proto  membership.proto  organization.proto  origin.proto  preset.proto  streaming.proto  subtitles.proto  thumbnails.proto  user.proto  video.proto  watermark.proto  webhook.proto
scripts/: sync-protos.sh
src/buf/validate/: validate_pb2.py
src/transcodely/: __init__.py  client.py  errors.py  pagination.py  streaming.py  types.py  version.py
src/transcodely/_codec/: json_codec.py
src/transcodely/_transport/: error_mapping.py  headers.py  transport.py
src/transcodely/resources/: _helpers.py  api_keys.py  apps.py  events.py  health.py  jobs.py  memberships.py  organizations.py  origins.py  presets.py  users.py  videos.py  webhook_endpoints.py
src/transcodely/v1/: api_key_pb2.py  api_key_pb2.pyi  app_pb2.py  app_pb2.pyi  codec_av1_pb2.py  codec_av1_pb2.pyi  codec_h264_pb2.py  codec_h264_pb2.pyi  codec_h265_pb2.py  codec_h265_pb2.pyi  codec_vp9_pb2.py  codec_vp9_pb2.pyi  common_pb2.py  common_pb2.pyi  content_aware_pb2.py  content_aware_pb2.pyi  drm_pb2.py  drm_pb2.pyi  hdr_pb2.py  hdr_pb2.pyi  health_pb2.py  health_pb2.pyi  job_pb2.py  job_pb2.pyi  media_pb2.py  media_pb2.pyi  membership_pb2.py  membership_pb2.pyi  organization_pb2.py  organization_pb2.pyi  origin_pb2.py  origin_pb2.pyi  preset_pb2.py  preset_pb2.pyi  streaming_pb2.py  streaming_pb2.pyi  subtitles_pb2.py  subtitles_pb2.pyi  thumbnails_pb2.py  thumbnails_pb2.pyi  (+8 more)
src/transcodely/webhooks/: __init__.py  construct_event.py  signature.py  types.py
tests/: test_animated_preview.py  test_apps_resource.py  test_codec.py  test_construct_event.py  test_error_mapping.py  test_event_catalog.py  test_events_resource.py  test_headers.py  test_jobs_resource.py  test_memberships_resource.py  test_pagination.py  test_streaming.py  test_users_resource.py  test_videos_resource.py  test_watermark.py  test_webhook_enum_decoding.py  test_webhook_signature.py  test_webhook_vectors.py
tests/webhooks/fixtures/: vectors.json
