[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcodely"
version = "0.3.1"
description = "Official Python SDK for the Transcodely video transcoding API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Transcodely" }]
requires-python = ">=3.10"
keywords = ["transcodely", "video", "transcoding", "encoding", "hls", "dash", "streaming", "connect-rpc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "protobuf>=5.0",
    "httpx>=0.27",
    "typing-extensions>=4.10",
]

[project.optional-dependencies]
fast = ["orjson>=3.10"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://transcodely.com"
Documentation = "https://transcodely.com/docs"
Repository = "https://github.com/transcodely/transcodely-python"
Issues = "https://github.com/transcodely/transcodely-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/transcodely", "src/buf"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md", "/LICENSE", "/pyproject.toml"]

[tool.ruff]
target-version = "py310"
line-length = 100
# Exclude generated proto code — buf/ is the validate descriptor module
# and transcodely/v1/*_pb2.py(i) are protoc-generated message classes.
extend-exclude = ["src/buf", "src/transcodely/v1"]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["src/buf", "src/transcodely/v1"]

[[tool.mypy.overrides]]
module = ["buf.*", "transcodely.v1.*"]
ignore_errors = true
